@@ -5,45 +5,191 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>432</width>
-    <height>109</height>
+    <width>390</width>
+    <height>235</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Orbitals</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
+  <layout class="QGridLayout" name="gridLayout_2" >
    <item row="0" column="0" >
     <widget class="QLineEdit" name="fileName" />
    </item>
-   <item row="0" column="2" >
+   <item row="0" column="1" >
     <widget class="QPushButton" name="loadFile" >
      <property name="text" >
       <string>Load File</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2" >
+   <item row="1" column="0" >
+    <widget class="QComboBox" name="orbitalCombo" />
+   </item>
+   <item row="1" column="1" >
     <widget class="QPushButton" name="calculate" >
      <property name="text" >
       <string>Calculate</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" >
-    <spacer name="verticalSpacer" >
+   <item row="2" column="0" colspan="2" >
+    <widget class="QFrame" name="frame" >
+     <property name="frameShape" >
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="1" >
+       <layout class="QHBoxLayout" name="horizontalLayout" >
+        <item>
+         <widget class="QLineEdit" name="originX" />
+        </item>
+        <item>
+         <widget class="QLineEdit" name="originY" />
+        </item>
+        <item>
+         <widget class="QLineEdit" name="originZ" />
+        </item>
+        <item>
+         <spacer name="horizontalSpacer" >
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Steps:</string>
+        </property>
+        <property name="buddy" >
+         <cstring>stepsX</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <layout class="QHBoxLayout" name="horizontalLayout_2" >
+        <item>
+         <widget class="QLineEdit" name="stepsX" />
+        </item>
+        <item>
+         <widget class="QLineEdit" name="stepsY" />
+        </item>
+        <item>
+         <widget class="QLineEdit" name="stepsZ" />
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3" >
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
+         <string>Step SIze:</string>
+        </property>
+        <property name="buddy" >
+         <cstring>stepSize</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" >
+       <layout class="QHBoxLayout" name="horizontalLayout_3" >
+        <item>
+         <widget class="QLineEdit" name="stepSize" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+            <horstretch>30</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize" >
+           <size>
+            <width>90</width>
+            <height>16777215</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2" >
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="3" column="1" >
+       <spacer name="verticalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>20</width>
+          <height>177</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
+         <string>Origin:</string>
+        </property>
+        <property name="buddy" >
+         <cstring>originX</cstring>
+        </property>
+       </widget>
+      </item>
+     </layout>
+     <zorder>label_3</zorder>
+     <zorder>label_2</zorder>
+     <zorder>label</zorder>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2" >
+    <spacer name="verticalSpacer_2" >
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
-       <height>177</height>
+       <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="3" column="0" colspan="3" >
+   <item row="4" column="0" colspan="2" >
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
@@ -53,11 +199,22 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" >
-    <widget class="QComboBox" name="orbitalCombo" />
-   </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>fileName</tabstop>
+  <tabstop>loadFile</tabstop>
+  <tabstop>orbitalCombo</tabstop>
+  <tabstop>calculate</tabstop>
+  <tabstop>originX</tabstop>
+  <tabstop>originY</tabstop>
+  <tabstop>originZ</tabstop>
+  <tabstop>stepsX</tabstop>
+  <tabstop>stepsY</tabstop>
+  <tabstop>stepsZ</tabstop>
+  <tabstop>stepSize</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
